# openjdk-xcode

./: .gitignore  build-all.sh  build-images-release.sh  build-images-slowdebug.sh  build-javafx.sh  build-jdk.sh  build-jmc.sh  build8.sh  tools.sh
jdk8u/: .gitignore  CMakeLists.txt  Makefile  a.out  cmake.sh  configure  delete_precompiled_hpp_pch.sh
jdk8u-dev/: CMakeLists.txt  MESI.md  Makefile  a.out  compile_commands.json  configure  delete_precompiled_hpp_pch.sh  openjdk源码学习--jvm的启动流程.md  testHSDB.sh
jdk8u-dev/Notes/: NOTE.md
jdk8u-dev/common/autoconf/: configure  configure.ac  generated-configure.sh  spec.gmk.in  toolchain.m4
jdk8u-dev/hotspot/src/cpu/sparc/vm/: templateTable_sparc.cpp
jdk8u-dev/hotspot/src/cpu/x86/vm/: assembler_x86.cpp  assembler_x86.hpp  c1_Runtime1_x86.cpp  icache_x86.hpp  interp_masm_x86_64.cpp  interpreter_x86.hpp  macroAssembler_x86.cpp  macroAssembler_x86.hpp  register_definitions_x86.cpp  register_x86.hpp  stubGenerator_x86_32.cpp  stubGenerator_x86_64.cpp  templateInterpreter_x86.hpp  templateInterpreter_x86_64.cpp  templateTable_x86_64.cpp  templateTable_x86_64.hpp
jdk8u-dev/hotspot/src/os/bsd/dtrace/: jvm_dtrace.c
jdk8u-dev/hotspot/src/os/bsd/vm/: attachListener_bsd.cpp  os_bsd.cpp
jdk8u-dev/hotspot/src/os/linux/vm/: os_linux.cpp  os_linux.hpp
jdk8u-dev/hotspot/src/os/windows/vm/: jvm_windows.cpp
jdk8u-dev/hotspot/src/os_cpu/bsd_x86/vm/: os_bsd_x86.cpp
jdk8u-dev/hotspot/src/os_cpu/linux_x86/vm/: atomic_linux_x86.inline.hpp  orderAccess_linux_x86.inline.hpp
jdk8u-dev/jdk/make/: CompileLaunchers.gmk  Setup.gmk
jdk8u-dev/jdk/make/gensrc/: GensrcMisc.gmk
jdk8u-dev/jdk/make/lib/: CoreLibraries.gmk
jdk8u-dev/make/: Javadoc.gmk  MakeHelpers.gmk
jdk8u-dev/test/: set_base_env.sh
jdk8u-dev/test/jni/: HelloWorld.java  test_jni.sh
jdk8u-dev/test/native/: Makefile  clean.sh  compile_jvm.sh  jvm.c  setenv.sh  test_java.sh  test_native_c.sh
jdk8u-dev/test/native/java/: Main.java
jdk8u-dev/test/sample/: set_java_env.sh  test_java.sh
jdk8u/Gammar/: gamma
jdk8u/Notes/: (186条消息) Java的LockSupport.park()实现分析_横云断岭的博客-CSDN博客.md  (186条消息) java signal handler_JAVA优雅停机的实现_weixin_39977547的博客-CSDN博客.md  (186条消息) 从java进程里dump出类的class文件的小工具--dumpclass_运行中的jvm dump class_横云断岭的博客-CSDN博客.md  (186条消息) 利用hsdis和JITWatch查看分析HotSpot JIT compiler生成的汇编代码_如何分析 hsdis 产生的机器指令_横云断岭的博客-CSDN博客.md  (186条消息) 编绎调试HotSpot JVM及在Eclipse里调试_横云断岭的博客-CSDN博客.md  (186条消息) 通过公平锁分析AQS_法拉弟弟的博客-CSDN博客.md  (187条消息) JVM篇-结合源码分析垃圾收集器的类型__微风轻起的博客-CSDN博客.md  (187条消息) JVM诊断及工具笔记(2)使用arthas定位哪里执行了Systemgc()_arthas memory_wgcn我的金斧头呢的博客-CSDN博客.md  (187条消息) Java是如何创建线程的（一）从java到jvm_java创建线程的过程_bd7xzz的博客-CSDN博客.md  (187条消息) Java是如何创建线程的（二）从glibc到kernel thread_java调用glibc_bd7xzz的博客-CSDN博客.md  (187条消息) Java源码剖析——彻底搞懂Reference和ReferenceQueue_Jesministrator的博客-CSDN博客.md  (187条消息) ReferenceQueue理解_referencequeue.poll_qq502130297的博客-CSDN博客.md  (187条消息) Understanding Weak References_fancyerII的博客-CSDN博客.md  (187条消息) WeakHashMap源码解析及使用场景_weakhashmap应用场景_李思苇的博客-CSDN博客.md  (187条消息) 《Java源码分析》：ReferenceQueue、Reference及其子类_HelloWorld_EE的博客-CSDN博客.md  (187条消息) 【Hotspot】 执行字节码指令流程(1)：堆栈的创建以及Java函数调用_0x13的博客-CSDN博客.md  (187条消息) 【Hotspot】执行字节码指令流程(2)：解释器（TemplateInterpreterC++）_0x13的博客-CSDN博客.md  (187条消息) 实战案例分享：根据 JVM crash 日志定位和分析问题_王知无(import_bigdata)的博客-CSDN博客.md  (187条消息) 弱引用——WeakReference——所引用的对象的回收规则_弱引用对象_李思苇的博客-CSDN博客.md  (187条消息) 警惕jdk8 UDP和Thread.interrupt的Bug_jdk8 漏洞_bd7xzz的博客-CSDN博客.md  (187条消息) 阿里高级专家推荐学习深入解析java虚拟机：垃圾回收，Parallel GC_java parallel gc_写代码的珏秒秒的博客-CSDN博客.md  (25 封私信  80 条消息) ConcurrentHashMap大量使用Unsafe的putOrderedObject出于什么考虑.md  (26 封私信  80 条消息) WeakHashMap 的实际使用场景有哪些？.md  C1记录---HIR.doc  C1记录---LIR.doc  C1记录.doc  CMakeLists.txt  Concurrency JSR-166 Interest Site.md  HSDB 告诉我们 Java 对象的内存地址.md  HSDB从入门到实战.md  Inside HotSpot 模板解释器  解释.md  JVM Attach实现原理剖析 - Yungyu - 博客园.md  JVM CPU Profiler技术原理及源码深度解析.md  JVM故障分析及性能优化系列之一：使用jstack定位线程堆栈信息 – 爪哇堂 JavaTang.md  JVM故障分析及性能优化系列之二：jstack生成的Thread Dump日志结构解析 – 爪哇堂 JavaTang.md  JVM系列之：关于HSDB的一点心得  HeapDump性能社区.md  Java Attach机制之Java篇.md  Java Attach机制之Native篇.md  Java Reference核心原理分析  并发编程网 – ifeve.com.md  Java中命令行调用大坑.md  (+23 more)
jdk8u/Notes/volatile相关/: (157条消息) hotspot x86平台的内存屏障的实现_内存屏障lock实现_扶我起来我还要写代码的博客-CSDN博客.md  (24 封私信  80 条消息) 既然CPU有缓存一致性协议（MESI），为什么JMM还需要volatile关键字？.md  C++11中的内存模型上篇 - 内存模型基础 - codedump的网络日志.md  CPU体系结构 - 黑客画家的个人空间 - OSCHINA.md  openjdk1.8中的Makefile.md  volatile底层原理详解.md  x86-TSO  适用于x86体系架构并发编程的内存模型  执生.md  《内存一致性与缓存一致性》笔记（一）：基础.md  《内存一致性与缓存一致性》笔记（三）：TSO与x86内存模型.md  《内存一致性与缓存一致性》笔记（二）：顺序一致性.md  【cache篇】MESI协议.md  为什么在 x86 架构下只有 StoreLoad 屏障是有效指令？.md  为什么我们需要内存屏障？ · Issue 4 · luohahaMyBlog.md  为何 x86 下只有 storeload 重排 - TomStudio.md  习题课3.pptx  从硬件层面理解memory barrier.md  全网最详细的Intel CPU体系结构分析.md  内存屏障与内存模型.md  内存屏障及其在-JVM 内的应用（上） - 掘金.md  内存屏障及其在-JVM 内的应用（下） - 掘金.md  已经有 MESI 协议，为什么还需要 volatile 关键字？.md  通过实例程序验证与优化谈谈网上很多对于Java DCL的一些误解以及为何要理解Java内存模型 - 腾讯云开发者社区-腾讯云.md
jdk8u/Notes/手写红黑树源码及相关文档课件/: RBTree.java  RBTreeTest.java  TreeOperation.java
jdk8u/common/autoconf/: autogen.sh  basics.m4  boot-jdk.m4  configure  configure.ac  generated-configure.sh  jdk-options.m4  spec.gmk.in  toolchain.m4
jdk8u/hotspot/make/bsd/makefiles/: buildtree.make
jdk8u/jdk/make/: BuildJdk.gmk  CompileLaunchers.gmk  CreateJars.gmk  Images.gmk  profile-includes.txt  profile-rtjar-includes.txt
jdk8u/jdk/make/gensrc/: GensrcMisc.gmk
jdk8u/make/: Main.gmk  MakeHelpers.gmk
jdk8u/make/common/: MakeBase.gmk
jdk8u/test/: set_base_env.sh
jdk8u/test/HSDB/: run_hsdb.sh  set_java_env.sh  sources.list  test_java.sh
jdk8u/test/HSDB/java/: Person.java  TestHSDB.java
jdk8u/test/hsdis/: build_hsdis.sh
jdk8u/test/jni/: set_java_env.sh
jdk8u/test/jni/setcpu/: CpuMain.java  SetCpu.java  test_jni.sh
jdk8u/test/native/: Makefile  jvm.c  set_native_env.sh
jdk8u/test/sample/: compile_all_java.sh  run_java_main.sh  set_java_env.sh  source.txt  test_java.sh  test_java_full_gc.sh  test_java_sample.sh  test_java_volatile.sh
jdk8u/test/sample/java/: FullGC.java  LargeArray.java  NanoTime.java  Sample.java  VolatileTest.java
(+712 files in other folders)
